# A-Maze-ing

./: .gitignore  ERROR_CASES.md  Makefile  PROGRESS_2026-04-19.md  README.md  README_short.md  a_maze_ing.py  config.txt  conftest.py  maze.txt  maze_commented.txt  maze_seeded.txt  mazegen-1.0.0-py3-none-any.whl  measure_pipeline.py  pyproject.toml  requirements.txt  test_checklist.md
config/: 42_pattern_limit.txt  README.md  invalid_algorithm_key_removed.txt  invalid_display_mode_key_removed.txt  invalid_duplicate_width.txt  invalid_empty_key.txt  invalid_empty_value.txt  invalid_entry_bad_format.txt  invalid_entry_not_integer.txt  invalid_entry_out_of_bounds.txt  invalid_exit_bad_format.txt  invalid_exit_not_integer.txt  invalid_exit_out_of_bounds.txt  invalid_height_negative.txt  invalid_height_not_integer.txt  invalid_height_zero.txt  invalid_malformed_no_equals.txt  invalid_missing_entry.txt  invalid_missing_exit.txt  invalid_missing_height.txt  invalid_missing_output_file.txt  invalid_missing_perfect.txt  invalid_missing_width.txt  invalid_output_file_bad_char.txt  invalid_output_parent_missing.txt  invalid_perfect_not_bool.txt  invalid_same_entry_exit.txt  invalid_seed_not_integer.txt  invalid_single_column_maze.txt  invalid_single_row_maze.txt  invalid_unknown_key.txt  invalid_width_negative.txt  invalid_width_not_integer.txt  invalid_width_zero.txt  test_with_output_file.txt  valid_large.txt  valid_minimal.txt  valid_with_comments.txt  valid_with_seed.txt
mazegen/: ConfigLoader.py  MazeApp.py  MazeGenerator.py  MazeModel.py  MazeSerializer.py  MazeSolver.py  (+3 more)
(+13 files in other folders)
