[project]
name = "mazegen"
version = "1.0.0"
description = "Produce the maze"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.4.2",
    "flake8>=7.3.0",
    "mypy>=1.20.0",
    "pydantic>=2.12.5",
    "typing_extensions>=4.15.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
